Fix delete container alignment (#4062)
* Center delete confirmation text

* Format CSS

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -178,8 +178,16 @@ input[type='email'] {
 }
 
 body.night-theme {
-  .on-page-nav-butt img, .icon-img, .dropdown-icon, .reaction-button:not(.reacted) img, .image-upload-button button, .icon-image,
-  .dev-badge, .chatchannels__config img, .external-link-img, .group-img {
+  .on-page-nav-butt img,
+  .icon-img,
+  .dropdown-icon,
+  .reaction-button:not(.reacted) img,
+  .image-upload-button button,
+  .icon-image,
+  .dev-badge,
+  .chatchannels__config img,
+  .external-link-img,
+  .group-img {
     -webkit-filter: invert(95%);
     filter: invert(95%);
   }
@@ -206,43 +214,46 @@ body.sans-serif-article-body {
 }
 body.comic-sans-article-body {
   .body {
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: 'Comic Sans MS', cursive, sans-serif;
   }
   .body p {
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: 'Comic Sans MS', cursive, sans-serif;
     font-size: 0.98em;
   }
 }
 
-.pro-visible-block, .trusted-visible-block {
+.pro-visible-block,
+.trusted-visible-block {
   display: none !important;
 }
 
-body.pro-status-true .pro-visible-block, body.trusted-status-true .trusted-visible-block {
+body.pro-status-true .pro-visible-block,
+body.trusted-status-true .trusted-visible-block {
   display: block !important;
 }
 
-.delete-confirm{
-  padding:150px 10px;
-  min-height:300px;
-  h4{
-    background:$black;
-    padding:5px 8px;
-    color:white;
-    display:inline-block;
-    margin-bottom:0px;
+.delete-confirm.container {
+  padding: 150px 10px;
+  min-height: 300px;
+  text-align: center;
+  h4 {
+    background: $black;
+    padding: 5px 8px;
+    color: white;
+    display: inline-block;
+    margin-bottom: 0px;
   }
-  h2{
-    font-size:22px;
-    margin-bottom:40px;
+  h2 {
+    font-size: 22px;
+    margin-bottom: 40px;
   }
-  a.delete-link{
-    background:$red;
-    color:white;
-    padding:10px 15px;
-    &:hover{
-      color:white;
-      opacity:0.9;
+  a.delete-link {
+    background: $red;
+    color: white;
+    padding: 10px 15px;
+    &:hover {
+      color: white;
+      opacity: 0.9;
     }
   }
 }
